# aios_dome

./: CMakeLists.txt  README.md
core/: ai_engine.cpp  ai_engine.h  main.cpp
file/: file_control.cpp  file_control.h  file_creator.cpp  file_creator.h  file_monitor.cpp  file_monitor.h
modules/cpu/: cpu_control.cpp  cpu_control.h  cpu_monitor.cpp  cpu_monitor.h
modules/memory/: mem_control.cpp  mem_control.h  mem_monitor.cpp  mem_monitor.h
process/: proc_control.cpp  proc_control.h  proc_monitor.cpp  proc_monitor.h
